--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Fruit Merge v77</title>
+    <title>Fruit Merge v78</title>
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
     <style>
         body { margin: 0; overflow: hidden; background: #000; font-family: 'Segoe UI', Roboto, sans-serif; touch-action: none; -webkit-user-select: none; }
-        #game-container { position: relative; width: 100vw; height: 100vh; background: #E6E6FA; border: 12px solid #333; box-sizing: border-box; overflow: hidden; transition: border 0.3s; }
+        #game-container { position: relative; width: 100vw; height: 100vh; background: #E6E6FA; border: 12px solid #333; box-sizing: border-box; overflow: hidden; }
         #top-ui { position: absolute; top: 0; left: 0; width: 100%; height: 145px; background: rgba(255,255,255,0.95); border-bottom: 4px solid #333; z-index: 1000; display: flex; flex-direction: column; padding: 10px; box-sizing: border-box; }
         #bottom-ui { position: absolute; bottom: 0; left: 0; width: 100%; height: 95px; background: #fff; border-top: 4px solid #333; z-index: 1000; display: flex; align-items: center; justify-content: space-around; padding-bottom: env(safe-area-inset-bottom); }
         #progress-wrap { width: 100%; height: 18px; background: #eee; border-radius: 9px; border: 3px solid #333; position: relative; overflow: hidden; margin: 4px 0; }
@@ -15,26 +15,27 @@
         .stats { display: flex; justify-content: space-between; font-weight: 600; font-size: 15px; color: #333; }
         .stats b { font-weight: 900; color: #000; }
         .btn { width: 56px; height: 56px; border-radius: 15px; border: 3px solid #333; display: flex; align-items: center; justify-content: center; font-size: 28px; cursor: pointer; background: #eee; box-shadow: 0 4px 0 #bbb; position: relative; }
-        .btn span { position: absolute; bottom: -14px; font-size: 10px; background: white; border: 1.5px solid #333; padding: 1px 5px; border-radius: 6px; font-weight: 900; }
-        #start-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 5000; display: flex; flex-direction: column; align-items: center; justify-content: center; color: white; text-align: center; cursor: pointer; }
+        .btn span { position: absolute; bottom: -14px; font-size: 10px; background: white; border: 1.5px solid #333; padding: 1px 5px; border-radius: 6px; font-weight: 900; pointer-events: none; }
+        #start-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 5000; display: flex; flex-direction: column; align-items: center; justify-content: center; color: white; cursor: pointer; text-align: center; }
         .modal { display: none; position: fixed; inset: 5%; background: white; z-index: 2000; border: 6px solid #333; border-radius: 28px; padding: 20px; overflow-y: auto; }
+        .store-cat h3 { margin: 15px 0 5px 0; font-size: 18px; border-bottom: 2px solid #333; display: inline-block; }
         .grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px; margin-top: 10px; }
         .item-card { border: 3px solid #eee; padding: 10px; border-radius: 15px; text-align: center; position: relative; font-weight: bold; cursor: pointer; }
         .item-card.selected { border-color: #2ecc71; background: #f0fff4; }
-        .badge { font-size: 9px; font-weight: 800; padding: 2px 6px; border-radius: 10px; position: absolute; top: -10px; right: -5px; border: 2px solid #333; color: #fff; }
+        .badge { font-size: 9px; font-weight: 800; padding: 2px 6px; border-radius: 10px; position: absolute; top: -10px; right: -5px; border: 2px solid #333; color: #fff; background: #f1c40f; }
     </style>
 </head>
 <body>
 
 <div id="start-overlay" onclick="startAudio()">
-    <h1>Fruit Merge</h1>
-    <p>Tap to Play with Sound</p>
+    <h1 style="margin-bottom: 10px;">Fruit Merge</h1>
+    <p>Tap to start with full sound</p>
 </div>
 
 <div id="game-container">
     <div id="top-ui">
         <div class="stats"><span>Score: <b id="s-val">0</b></span><span>Best: <b id="h-val">0</b></span></div>
-        <div id="next-disp" style="text-align:center; font-size:40px; height: 45px;"></div>
+        <div id="next-disp" style="text-align:center; font-size:40px; height: 45px; margin: 4px 0;"></div>
         <div id="progress-wrap"><div id="progress-bar"></div></div>
         <div class="stats"><span>Wallet: $<b id="w-val">0</b></span><span id="mute-btn" onclick="toggleMute()" style="cursor:pointer;">🔊</span></div>
     </div>
@@ -54,17 +55,18 @@
 </div>
 
 <div id="shopModal" class="modal">
-    <div style="display:flex; justify-content:space-between; align-items:center;"><h2>The Store</h2><button onclick="closeModal()" style="padding:10px;">Close</button></div>
+    <div style="display:flex; justify-content:space-between; align-items:center;"><h2>The Store</h2><button class="btn" style="width:40px;height:40px" onclick="closeModal()">×</button></div>
+    <p style="text-align:center; font-weight:bold; color:#2ecc71;">Wallet: $<span id="shop-wallet">0</span></p>
     <div id="shop-scroll"></div>
 </div>
 
 <div id="helpModal" class="modal">
-    <div style="display:flex; justify-content:space-between; align-items:center;"><h2>How to Play</h2><button onclick="closeModal()" style="padding:10px;">Close</button></div>
-    <p><b>Goal:</b> Drop and merge identical items to evolve them!</p>
-    <p><b>💣 Bomb:</b> Destroys items in a small area.</p>
-    <p><b>🧹 Broom:</b> Removes all items of one specific type.</p>
-    <p><b>✨ Magic Wand:</b> Evolve a specific item and all its twins instantly.</p>
-    <p><b>Wallet:</b> Your money persists even if you lose!</p>
+    <div style="display:flex; justify-content:space-between; align-items:center;"><h2>How to Play</h2><button class="btn" style="width:40px;height:40px" onclick="closeModal()">×</button></div>
+    <p><b>Merge items</b> of the same type to evolve them and earn money!</p>
+    <p><b>💣 Bomb ($500):</b> Explodes and removes nearby items.</p>
+    <p><b>🧹 Broom ($1,000):</b> Removes all items on board of a specific type.</p>
+    <p><b>✨ Wand ($1,500):</b> Evolves an item and all its identical twins.</p>
+    <p><b>Note:</b> Your wallet and unlocks are permanent!</p>
 </div>
 
 <script>
@@ -79,7 +81,7 @@ const canvas = document.getElementById('gameCanvas'), ctx = canvas.getContext('2
 function startAudio() {
     aCtx = new (window.AudioContext || window.webkitAudioContext)();
     document.getElementById('start-overlay').style.display = 'none';
-    playS(440, 'sine', 0.1, 0.3); // Confirmation beep
+    playS(440, 'sine', 0.1, 0.3);
 }
 
 function playS(f, type, dur, vol) {
@@ -90,11 +92,11 @@ function playS(f, type, dur, vol) {
 }
 
 function init() {
-    const s = localStorage.getItem('fm_v77');
+    const s = localStorage.getItem('fm_v78');
     if(s) {
         let saved = JSON.parse(s);
         Object.assign(state, saved);
-        state.score = 0; // Reset session score
+        state.score = 0; state.isGameOver = false;
     }
     engine = Matter.Engine.create();
     setupD();
@@ -104,13 +106,10 @@ function init() {
             const a=p.bodyA, b=p.bodyB;
             if(a.plugin?.t === b.plugin?.t && a.plugin?.t < 11 && !a.isMerging && !b.isMerging) {
                 a.isMerging = b.isMerging = true;
-                const nt=a.plugin.t+1; playS(200+(nt*60), 'sine', 0.2, 0.4);
+                const nt=a.plugin.t+1; playS(250+(nt*50), 'sine', 0.2, 0.4);
                 Matter.Composite.remove(engine.world, [a, b]);
-                Matter.Composite.add(engine.world, Matter.Bodies.circle((a.position.x+b.position.x)/2, (a.position.y+b.position.y)/2, SIZES[nt], { 
-                    restitution: 0.6, // Higher bounciness
-                    plugin: {t:nt, dT:null} 
-                }));
-                state.score += (nt*10); state.pts += (nt*5); updateUI();
+                Matter.Composite.add(engine.world, Matter.Bodies.circle((a.position.x+b.position.x)/2, (a.position.y+b.position.y)/2, SIZES[nt], { restitution: 0.5, plugin: {t:nt, dT:null} }));
+                state.score += (nt*10); state.pts += (nt*5); state.maxT = Math.max(state.maxT, nt); updateUI();
             }
         });
     });
@@ -135,6 +134,10 @@ function render(time) {
     if(state.isGameOver) return;
     ctx.fillStyle=THEME_DATA[state.theme]; ctx.fillRect(0,0,canvas.width,canvas.height);
     
+    // Danger Line
+    ctx.save(); ctx.strokeStyle="rgba(255,0,0,0.8)"; ctx.lineWidth=4; ctx.setLineDash([10,10]);
+    ctx.beginPath(); ctx.moveTo(0,190); ctx.lineTo(canvas.width,190); ctx.stroke(); ctx.restore();
+
     if(isDragging && !activePwr) { 
         lastX = Math.max(30, Math.min(canvas.width - 30, lastX));
         ctx.font="40px Arial"; ctx.textAlign="center"; ctx.fillText(SKINS[state.skin][currentIdx], lastX, 175);
@@ -156,14 +159,16 @@ function render(time) {
             if(Date.now() - b.plugin.dT > 1600) {
                 state.isGameOver = true;
                 playS(100, 'sawtooth', 1.0, 0.5);
-                setTimeout(() => { alert("Game Over!"); state.score=0; save(); location.reload(); }, 100);
+                setTimeout(() => { alert("Game Over! Score: " + state.score); state.score=0; state.maxT=0; save(); location.reload(); }, 100);
             }
         } else b.plugin.dT = null;
     });
 
     if(activePwr) { 
         ctx.save(); ctx.strokeStyle = "#00ffff"; ctx.lineWidth = 4;
-        ctx.beginPath(); ctx.arc(pwrX, pwrY, 45, 0, Math.PI*2); ctx.stroke(); ctx.restore();
+        ctx.beginPath(); ctx.arc(pwrX, pwrY, 45, 0, Math.PI*2); ctx.stroke();
+        ctx.beginPath(); ctx.moveTo(pwrX-60, pwrY); ctx.lineTo(pwrX+60, pwrY); ctx.moveTo(pwrX, pwrY-60); ctx.lineTo(pwrX, pwrY+60); ctx.stroke();
+        ctx.restore();
     }
     requestAnimationFrame(render);
 }
@@ -177,6 +182,7 @@ function prepPwr(t, e) {
 
 window.addEventListener('pointermove', (e) => { pwrX = e.clientX; pwrY = e.clientY; if(isDragging && !activePwr) lastX = e.clientX; });
 window.addEventListener('pointerup', () => {
+    if(state.isGameOver) return;
     if(activePwr) { usePwr(pwrX, pwrY); activePwr = null; }
     else if(isDragging && canDrop) {
         Matter.Composite.add(engine.world, Matter.Bodies.circle(lastX, 150, SIZES[currentIdx], { restitution:0.5, plugin:{t:currentIdx} }));
@@ -196,18 +202,23 @@ function usePwr(x, y) {
 function updateUI() {
     document.getElementById('s-val').innerText=state.score; document.getElementById('h-val').innerText=state.best=Math.max(state.best, state.score);
     document.getElementById('w-val').innerText=state.pts; document.getElementById('next-disp').innerText="Next: "+SKINS[state.skin][nextIdx];
-    document.getElementById('game-container').style.background=THEME_DATA[state.theme]; document.getElementById('game-container').style.borderColor=state.border;
+    document.getElementById('game-container').style.background=THEME_DATA[state.theme]; 
+    document.getElementById('game-container').style.borderColor=state.border;
     document.getElementById('progress-bar').style.width=(state.maxT/11*100)+"%";
     save();
 }
 
 function openShop() {
-    document.getElementById('shopModal').style.display='block';
-    let h = '<h3>Skins</h3><div class="grid">';
-    Object.keys(SKINS).forEach(id => h += `<div class="item-card ${state.skin===id?'selected':''}" onclick="buy('${id}','skin',500)">${SKINS[id][0]}<br>${id}</div>`);
-    h += '</div><h3>Themes</h3><div class="grid">';
-    Object.keys(THEME_DATA).forEach(id => h += `<div class="item-card ${state.theme===id?'selected':''}" onclick="buy('${id}','theme',300)"><div style="height:10px;background:${THEME_DATA[id]}"></div>${id}</div>`);
-    document.getElementById('shop-scroll').innerHTML = h + '</div>';
+    document.getElementById('shopModal').style.display='block'; document.getElementById('shop-wallet').innerText=state.pts;
+    let h = '<div class="store-cat"><h3>Skins</h3><div class="grid">';
+    Object.keys(SKINS).forEach(id => h += `<div class="item-card ${state.skin===id?'selected':''}" onclick="buy('${id}','skin',500)"><span class="badge" style="background:${state.owned.includes(id)?'#2ecc71':'#f1c40f'}">${state.owned.includes(id)?'Owned':'$500'}</span>${SKINS[id][0]}<br>${id}</div>`);
+    h += '</div></div><div class="store-cat"><h3>Outlines</h3><div class="grid">';
+    ['None', 'Black', 'White', 'Rainbow'].forEach(id => h += `<div class="item-card ${state.outline===id.toLowerCase()?'selected':''}" onclick="buy('${id.toLowerCase()}','outline',1000)"><span class="badge" style="background:${state.owned.includes('o_'+id.toLowerCase())?'#2ecc71':'#f1c40f'}">${state.owned.includes('o_'+id.toLowerCase())?'Owned':'$1k'}</span>${id}</div>`);
+    h += '</div></div><div class="store-cat"><h3>Themes</h3><div class="grid">';
+    Object.keys(THEME_DATA).forEach(id => h += `<div class="item-card ${state.theme===id?'selected':''}" onclick="buy('${id}','theme',300)"><span class="badge" style="background:${state.owned.includes(id)?'#2ecc71':'#f1c40f'}">${state.owned.includes(id)?'Owned':'$300'}</span><div style="height:10px;background:${THEME_DATA[id]}"></div>${id}</div>`);
+    h += '</div></div><div class="store-cat"><h3>Borders</h3><div class="grid">';
+    Object.keys(THEME_DATA).forEach(id => h += `<div class="item-card ${state.border===THEME_DATA[id]?'selected':''}" onclick="buy('${THEME_DATA[id]}','border',200)"><span class="badge" style="background:${state.owned.includes('b_'+THEME_DATA[id])?'#2ecc71':'#f1c40f'}">${state.owned.includes('b_'+THEME_DATA[id])?'Owned':'$200'}</span><div style="height:10px;background:${THEME_DATA[id]}"></div>${id}</div>`);
+    document.getElementById('shop-scroll').innerHTML = h + '</div></div>';
 }
 
 function buy(id, t, c) {
@@ -215,7 +226,7 @@ function buy(id, t, c) {
     if(!state.owned.includes(k)){ if(state.pts>=c){state.pts-=c; state.owned.push(k);} else return; }
     state[t]=id; updateUI(); openShop(); 
 }
-function save() { localStorage.setItem('fm_v77', JSON.stringify(state)); }
+function save() { localStorage.setItem('fm_v78', JSON.stringify(state)); }
 function closeModal() { document.querySelectorAll('.modal').forEach(m=>m.style.display='none'); }
 function openHelp() { document.getElementById('helpModal').style.display='block'; }
 function toggleMute() { state.muted=!state.muted; document.getElementById('mute-btn').innerText=state.muted?"🔇":"🔊"; save(); }
