--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Fruit Merge v78</title>
+    <title>Fruit Merge v79</title>
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
     <style>
-        body { margin: 0; overflow: hidden; background: #000; font-family: 'Segoe UI', Roboto, sans-serif; touch-action: none; -webkit-user-select: none; }
+        body { margin: 0; overflow: hidden; background: #000; font-family: 'Segoe UI', Roboto, sans-serif; touch-action: none; }
         #game-container { position: relative; width: 100vw; height: 100vh; background: #E6E6FA; border: 12px solid #333; box-sizing: border-box; overflow: hidden; }
-        #top-ui { position: absolute; top: 0; left: 0; width: 100%; height: 145px; background: rgba(255,255,255,0.95); border-bottom: 4px solid #333; z-index: 1000; display: flex; flex-direction: column; padding: 10px; box-sizing: border-box; }
-        #bottom-ui { position: absolute; bottom: 0; left: 0; width: 100%; height: 95px; background: #fff; border-top: 4px solid #333; z-index: 1000; display: flex; align-items: center; justify-content: space-around; padding-bottom: env(safe-area-inset-bottom); }
+        #top-ui { position: absolute; top: 0; left: 0; width: 100%; height: 145px; background: rgba(255,255,255,0.95); border-bottom: 4px solid #333; z-index: 10; display: flex; flex-direction: column; padding: 10px; box-sizing: border-box; }
+        #bottom-ui { position: absolute; bottom: 0; left: 0; width: 100%; height: 95px; background: #fff; border-top: 4px solid #333; z-index: 10; display: flex; align-items: center; justify-content: space-around; padding-bottom: env(safe-area-inset-bottom); }
         #progress-wrap { width: 100%; height: 18px; background: #eee; border-radius: 9px; border: 3px solid #333; position: relative; overflow: hidden; margin: 4px 0; }
         #progress-bar { height: 100%; background: #2ecc71; width: 0%; transition: width 0.3s; }
         .stats { display: flex; justify-content: space-between; font-weight: 600; font-size: 15px; color: #333; }
         .stats b { font-weight: 900; color: #000; }
         .btn { width: 56px; height: 56px; border-radius: 15px; border: 3px solid #333; display: flex; align-items: center; justify-content: center; font-size: 28px; cursor: pointer; background: #eee; box-shadow: 0 4px 0 #bbb; position: relative; }
         .btn span { position: absolute; bottom: -14px; font-size: 10px; background: white; border: 1.5px solid #333; padding: 1px 5px; border-radius: 6px; font-weight: 900; pointer-events: none; }
-        #start-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 5000; display: flex; flex-direction: column; align-items: center; justify-content: center; color: white; cursor: pointer; text-align: center; }
+        #start-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; color: white; cursor: pointer; }
         .modal { display: none; position: fixed; inset: 5%; background: white; z-index: 2000; border: 6px solid #333; border-radius: 28px; padding: 20px; overflow-y: auto; }
         .store-cat h3 { margin: 15px 0 5px 0; font-size: 18px; border-bottom: 2px solid #333; display: inline-block; }
         .grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px; margin-top: 10px; }
@@ -28,8 +28,8 @@
 <body>
 
 <div id="start-overlay" onclick="startAudio()">
-    <h1 style="margin-bottom: 10px;">Fruit Merge</h1>
-    <p>Tap to start with full sound</p>
+    <h1>Fruit Merge</h1>
+    <p>Tap to start with sound</p>
 </div>
 
 <div id="game-container">
@@ -40,7 +40,7 @@
         <div class="stats"><span>Wallet: $<b id="w-val">0</b></span><span id="mute-btn" onclick="toggleMute()" style="cursor:pointer;">🔊</span></div>
     </div>
 
-    <div style="position:absolute; top:155px; right:15px; z-index:1001; display:flex; flex-direction:column; gap:12px;">
+    <div style="position:absolute; top:155px; right:15px; z-index:5; display:flex; flex-direction:column; gap:12px;">
         <div class="btn" style="width:44px; height:44px; border-radius:50%; background:#f1c40f;" onclick="openHelp()">?</div>
         <div class="btn" style="width:44px; height:44px; border-radius:50%; background:#3498db;" onclick="toggleFS()">⛶</div>
     </div>
@@ -55,18 +55,17 @@
 </div>
 
 <div id="shopModal" class="modal">
-    <div style="display:flex; justify-content:space-between; align-items:center;"><h2>The Store</h2><button class="btn" style="width:40px;height:40px" onclick="closeModal()">×</button></div>
+    <div style="display:flex; justify-content:space-between; align-items:center;"><h2>Store</h2><button class="btn" style="width:40px;height:40px" onclick="closeModal()">×</button></div>
     <p style="text-align:center; font-weight:bold; color:#2ecc71;">Wallet: $<span id="shop-wallet">0</span></p>
     <div id="shop-scroll"></div>
 </div>
 
 <div id="helpModal" class="modal">
-    <div style="display:flex; justify-content:space-between; align-items:center;"><h2>How to Play</h2><button class="btn" style="width:40px;height:40px" onclick="closeModal()">×</button></div>
-    <p><b>Merge items</b> of the same type to evolve them and earn money!</p>
-    <p><b>💣 Bomb ($500):</b> Explodes and removes nearby items.</p>
-    <p><b>🧹 Broom ($1,000):</b> Removes all items on board of a specific type.</p>
-    <p><b>✨ Wand ($1,500):</b> Evolves an item and all its identical twins.</p>
-    <p><b>Note:</b> Your wallet and unlocks are permanent!</p>
+    <div style="display:flex; justify-content:space-between; align-items:center;"><h2>Help</h2><button class="btn" style="width:40px;height:40px" onclick="closeModal()">×</button></div>
+    <p><b>Drop items</b> to merge them!</p>
+    <p><b>💣 Bomb:</b> Tap and drag to explode a group.</p>
+    <p><b>🧹 Broom:</b> Tap and drag to remove all matching items.</p>
+    <p><b>✨ Wand:</b> Tap and drag to evolve a specific group.</p>
 </div>
 
 <script>
@@ -81,7 +80,8 @@ const canvas = document.getElementById('gameCanvas'), ctx = canvas.getContext('2
 function startAudio() {
     aCtx = new (window.AudioContext || window.webkitAudioContext)();
     document.getElementById('start-overlay').style.display = 'none';
-    playS(440, 'sine', 0.1, 0.3);
+    if(aCtx.state === 'suspended') aCtx.resume();
+    playS(440, 'sine', 0.1, 0.2);
 }
 
 function playS(f, type, dur, vol) {
@@ -92,12 +92,9 @@ function playS(f, type, dur, vol) {
 }
 
 function init() {
-    const s = localStorage.getItem('fm_v78');
-    if(s) {
-        let saved = JSON.parse(s);
-        Object.assign(state, saved);
-        state.score = 0; state.isGameOver = false;
-    }
+    const s = localStorage.getItem('fm_v79');
+    if(s) Object.assign(state, JSON.parse(s));
+    state.score = 0; state.isGameOver = false;
     engine = Matter.Engine.create();
     setupD();
     Matter.Events.on(engine, 'collisionStart', (e) => {
@@ -134,8 +131,8 @@ function render(time) {
     if(state.isGameOver) return;
     ctx.fillStyle=THEME_DATA[state.theme]; ctx.fillRect(0,0,canvas.width,canvas.height);
     
-    // Danger Line
-    ctx.save(); ctx.strokeStyle="rgba(255,0,0,0.8)"; ctx.lineWidth=4; ctx.setLineDash([10,10]);
+    // Death Line
+    ctx.save(); ctx.strokeStyle="rgba(255,0,0,0.5)"; ctx.setLineDash([10,10]); ctx.lineWidth=3;
     ctx.beginPath(); ctx.moveTo(0,190); ctx.lineTo(canvas.width,190); ctx.stroke(); ctx.restore();
 
     if(isDragging && !activePwr) { 
@@ -143,13 +140,13 @@ function render(time) {
         ctx.font="40px Arial"; ctx.textAlign="center"; ctx.fillText(SKINS[state.skin][currentIdx], lastX, 175);
     }
 
-    Matter.Composite.allBodies(engine.world).forEach(b => {
-        if(b.plugin?.t === undefined) return;
+    const bodies = Matter.Composite.allBodies(engine.world).filter(b => b.plugin?.t !== undefined);
+    bodies.forEach(b => {
         ctx.save(); ctx.translate(b.position.x, b.position.y); ctx.rotate(b.angle);
         ctx.fillStyle = COLORS[b.plugin.t]; ctx.beginPath(); ctx.arc(0,0,b.circleRadius,0,Math.PI*2); ctx.fill(); 
         if(state.outline !== 'none') {
             ctx.strokeStyle = state.outline==='rainbow' ? `hsl(${time/8 % 360}, 75%, 50%)` : (state.outline==='white'?'#fff':'#000');
-            ctx.lineWidth=4; ctx.stroke();
+            ctx.lineWidth=3; ctx.stroke();
         }
         ctx.font = (b.circleRadius*1.3)+"px Arial"; ctx.textAlign="center"; ctx.textBaseline="middle"; 
         ctx.fillStyle = "#fff"; ctx.fillText(SKINS[state.skin][b.plugin.t], 0, 0); ctx.restore();
@@ -159,16 +156,14 @@ function render(time) {
             if(Date.now() - b.plugin.dT > 1600) {
                 state.isGameOver = true;
                 playS(100, 'sawtooth', 1.0, 0.5);
-                setTimeout(() => { alert("Game Over! Score: " + state.score); state.score=0; state.maxT=0; save(); location.reload(); }, 100);
+                setTimeout(() => { alert("Game Over!"); state.score=0; save(); location.reload(); }, 100);
             }
         } else b.plugin.dT = null;
     });
 
     if(activePwr) { 
-        ctx.save(); ctx.strokeStyle = "#00ffff"; ctx.lineWidth = 4;
-        ctx.beginPath(); ctx.arc(pwrX, pwrY, 45, 0, Math.PI*2); ctx.stroke();
-        ctx.beginPath(); ctx.moveTo(pwrX-60, pwrY); ctx.lineTo(pwrX+60, pwrY); ctx.moveTo(pwrX, pwrY-60); ctx.lineTo(pwrX, pwrY+60); ctx.stroke();
-        ctx.restore();
+        ctx.save(); ctx.strokeStyle="#00ffff"; ctx.lineWidth=4; ctx.beginPath(); ctx.arc(pwrX, pwrY, 45, 0, Math.PI*2); ctx.stroke();
+        ctx.beginPath(); ctx.moveTo(pwrX-60, pwrY); ctx.lineTo(pwrX+60, pwrY); ctx.moveTo(pwrX, pwrY-60); ctx.lineTo(pwrX, pwrY+60); ctx.stroke(); ctx.restore();
     }
     requestAnimationFrame(render);
 }
@@ -180,7 +175,16 @@ function prepPwr(t, e) {
     pwrX = touch.clientX; pwrY = touch.clientY;
 }
 
-window.addEventListener('pointermove', (e) => { pwrX = e.clientX; pwrY = e.clientY; if(isDragging && !activePwr) lastX = e.clientX; });
+canvas.addEventListener('pointerdown', (e) => {
+    if(state.isGameOver) return;
+    if(e.clientY > 145 && e.clientY < canvas.height-95) { isDragging = true; lastX = e.clientX; }
+});
+
+window.addEventListener('pointermove', (e) => { 
+    pwrX = e.clientX; pwrY = e.clientY; 
+    if(isDragging && !activePwr) lastX = e.clientX; 
+});
+
 window.addEventListener('pointerup', () => {
     if(state.isGameOver) return;
     if(activePwr) { usePwr(pwrX, pwrY); activePwr = null; }
@@ -193,7 +197,7 @@ window.addEventListener('pointerup', () => {
 
 function usePwr(x, y) {
     const bds=Matter.Composite.allBodies(engine.world).filter(b=>b.plugin?.t!==undefined);
-    const h=bds.find(b=>Math.hypot(b.position.x-x, b.position.y-y)<b.circleRadius+30);
+    const h=bds.find(b=>Math.hypot(b.position.x-x, b.position.y-y)<b.circleRadius+20);
     if(activePwr==='bomb'){ bds.forEach(b=>{if(Math.hypot(b.position.x-x, b.position.y-y)<100) Matter.Composite.remove(engine.world,b);}); state.pts-=500; playS(80, 'square', 0.4, 0.4); }
     else if(activePwr==='wipe'&&h){ bds.forEach(b=>{if(b.plugin.t===h.plugin.t) Matter.Composite.remove(engine.world,b);}); state.pts-=1000; playS(400, 'sine', 0.3, 0.3); }
     else if(activePwr==='evo'&&h&&h.plugin.t<11){ const t=h.plugin.t; bds.forEach(b=>{if(b.plugin.t===t){ const nt=t+1; Matter.Composite.add(engine.world, Matter.Bodies.circle(b.position.x,b.position.y,SIZES[nt],{restitution:0.5, plugin:{t:nt}})); Matter.Composite.remove(engine.world,b); }}); state.pts-=1500; playS(600, 'sine', 0.3, 0.3); }
@@ -202,23 +206,21 @@ function usePwr(x, y) {
 function updateUI() {
     document.getElementById('s-val').innerText=state.score; document.getElementById('h-val').innerText=state.best=Math.max(state.best, state.score);
     document.getElementById('w-val').innerText=state.pts; document.getElementById('next-disp').innerText="Next: "+SKINS[state.skin][nextIdx];
-    document.getElementById('game-container').style.background=THEME_DATA[state.theme]; 
-    document.getElementById('game-container').style.borderColor=state.border;
-    document.getElementById('progress-bar').style.width=(state.maxT/11*100)+"%";
-    save();
+    document.getElementById('game-container').style.background=THEME_DATA[state.theme]; document.getElementById('game-container').style.borderColor=state.border;
+    document.getElementById('progress-bar').style.width=(state.maxT/11*100)+"%"; save();
 }
 
 function openShop() {
     document.getElementById('shopModal').style.display='block'; document.getElementById('shop-wallet').innerText=state.pts;
-    let h = '<div class="store-cat"><h3>Skins</h3><div class="grid">';
-    Object.keys(SKINS).forEach(id => h += `<div class="item-card ${state.skin===id?'selected':''}" onclick="buy('${id}','skin',500)"><span class="badge" style="background:${state.owned.includes(id)?'#2ecc71':'#f1c40f'}">${state.owned.includes(id)?'Owned':'$500'}</span>${SKINS[id][0]}<br>${id}</div>`);
-    h += '</div></div><div class="store-cat"><h3>Outlines</h3><div class="grid">';
-    ['None', 'Black', 'White', 'Rainbow'].forEach(id => h += `<div class="item-card ${state.outline===id.toLowerCase()?'selected':''}" onclick="buy('${id.toLowerCase()}','outline',1000)"><span class="badge" style="background:${state.owned.includes('o_'+id.toLowerCase())?'#2ecc71':'#f1c40f'}">${state.owned.includes('o_'+id.toLowerCase())?'Owned':'$1k'}</span>${id}</div>`);
-    h += '</div></div><div class="store-cat"><h3>Themes</h3><div class="grid">';
-    Object.keys(THEME_DATA).forEach(id => h += `<div class="item-card ${state.theme===id?'selected':''}" onclick="buy('${id}','theme',300)"><span class="badge" style="background:${state.owned.includes(id)?'#2ecc71':'#f1c40f'}">${state.owned.includes(id)?'Owned':'$300'}</span><div style="height:10px;background:${THEME_DATA[id]}"></div>${id}</div>`);
-    h += '</div></div><div class="store-cat"><h3>Borders</h3><div class="grid">';
-    Object.keys(THEME_DATA).forEach(id => h += `<div class="item-card ${state.border===THEME_DATA[id]?'selected':''}" onclick="buy('${THEME_DATA[id]}','border',200)"><span class="badge" style="background:${state.owned.includes('b_'+THEME_DATA[id])?'#2ecc71':'#f1c40f'}">${state.owned.includes('b_'+THEME_DATA[id])?'Owned':'$200'}</span><div style="height:10px;background:${THEME_DATA[id]}"></div>${id}</div>`);
-    document.getElementById('shop-scroll').innerHTML = h + '</div></div>';
+    let h = '<h3>Skins</h3><div class="grid">';
+    Object.keys(SKINS).forEach(id => h += `<div class="item-card ${state.skin===id?'selected':''}" onclick="buy('${id}','skin',500)"><span class="badge">${state.owned.includes(id)?'Owned':'$500'}</span>${SKINS[id][0]}<br>${id}</div>`);
+    h += '</div><h3>Outlines</h3><div class="grid">';
+    ['None', 'Black', 'White', 'Rainbow'].forEach(id => h += `<div class="item-card ${state.outline===id.toLowerCase()?'selected':''}" onclick="buy('${id.toLowerCase()}','outline',1000)"><span class="badge">${state.owned.includes('o_'+id.toLowerCase())?'Owned':'$1k'}</span>${id}</div>`);
+    h += '</div><h3>Themes</h3><div class="grid">';
+    Object.keys(THEME_DATA).forEach(id => h += `<div class="item-card ${state.theme===id?'selected':''}" onclick="buy('${id}','theme',300)"><span class="badge">${state.owned.includes(id)?'Owned':'$300'}</span><div style="height:10px;background:${THEME_DATA[id]}"></div>${id}</div>`);
+    h += '</div><h3>Borders</h3><div class="grid">';
+    Object.keys(THEME_DATA).forEach(id => h += `<div class="item-card ${state.border===THEME_DATA[id]?'selected':''}" onclick="buy('${THEME_DATA[id]}','border',200)"><span class="badge">${state.owned.includes('b_'+THEME_DATA[id])?'Owned':'$200'}</span><div style="height:10px;background:${THEME_DATA[id]}"></div>${id}</div>`);
+    document.getElementById('shop-scroll').innerHTML = h + '</div>';
 }
 
 function buy(id, t, c) {
@@ -226,7 +228,7 @@ function buy(id, t, c) {
     if(!state.owned.includes(k)){ if(state.pts>=c){state.pts-=c; state.owned.push(k);} else return; }
     state[t]=id; updateUI(); openShop(); 
 }
-function save() { localStorage.setItem('fm_v78', JSON.stringify(state)); }
+function save() { localStorage.setItem('fm_v79', JSON.stringify(state)); }
 function closeModal() { document.querySelectorAll('.modal').forEach(m=>m.style.display='none'); }
 function openHelp() { document.getElementById('helpModal').style.display='block'; }
 function toggleMute() { state.muted=!state.muted; document.getElementById('mute-btn').innerText=state.muted?"🔇":"🔊"; save(); }
